--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="13.0.3" manuallyInstalled="true" />
+  <package id="stellar-dotnet-sdk-xdr" version="8.0.6" manuallyInstalled="true" />
 </packages>
