--- a/ContractSandbox/warmancer-prototype/contracts/hello-world/Cargo.toml
+++ b/ContractSandbox/warmancer-prototype/contracts/hello-world/Cargo.toml
@@ -13,3 +13,6 @@ soroban-sdk = { workspace = true }
 
 [dev-dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
+
+[package.metadata.cargo-test-options]
+test-threads = 1
