--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.kyrylokuzyk.primetween": "file:../Assets/Plugins/PrimeTween/internal/com.kyrylokuzyk.primetween.tgz",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.formats.fbx": "5.1.3",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.probuilder": "6.0.4",
