--- a/ContractSandbox/warmancer-prototype/contracts/hello-world/Cargo.toml
+++ b/ContractSandbox/warmancer-prototype/contracts/hello-world/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 doctest = false
 
 [dependencies]
-soroban-sdk = { workspace = true }
+soroban-sdk = { workspace = true, default-features = false }
 
 [dev-dependencies]
 soroban-sdk = { workspace = true, features = ["testutils"] }
