--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.formats.fbx": "5.1.3",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.inputsystem": "1.11.2",
+    "com.unity.memoryprofiler": "1.1.8",
     "com.unity.probuilder": "6.0.4",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.5",
