--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
     "com.boxqkrtm.ide.cursor": "https://github.com/boxqkrtm/com.unity.ide.cursor.git",
-    "com.gamelovers.mcp-unity": "https://github.com/CoderGamester/mcp-unity.git",
     "com.kyrylokuzyk.primetween": "file:../Assets/Plugins/PrimeTween/internal/com.kyrylokuzyk.primetween.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.formats.fbx": "5.1.3",
-    "com.unity.ide.rider": "3.0.36",
+    "com.unity.ide.rider": "3.0.37",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.memoryprofiler": "1.1.8",
     "com.unity.probuilder": "6.0.4",
@@ -13,6 +12,7 @@
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
+    "jillejr.newtonsoft.json-for-unity": "https://github.com/jilleJr/Newtonsoft.Json-for-Unity.git#upm",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
