--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,12 +7,12 @@
     "com.unity.ide.rider": "3.0.37",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.memoryprofiler": "1.1.8",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.probuilder": "6.0.4",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "jillejr.newtonsoft.json-for-unity": "https://github.com/jilleJr/Newtonsoft.Json-for-Unity.git#upm",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
